--- a/package.xml
+++ b/package.xml
@@ -10,7 +10,7 @@
   <license>BSD</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
-  <depend>pcl_ros</depend>
+  <depend>pcl_conversions</depend>
   <depend>rclcpp</depend>
 
   <export>
